# esp32-fishing-controller

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  pytest.ini  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c  tusb_hid_example_main.c
