[tool.poetry]
name = "esp32-fishing-controller"
version = "1.0.0"
description = "ESP32-S2 Fishing Game Controller with KY-040 Rotary Encoder"
authors = ["Christopher Milian <christophermilian16@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-embedded = "^1.10.0"
pytest-embedded-serial = "^1.10.0"
pytest-embedded-idf = "^1.10.0"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "import-error",  # ESP-IDF specific imports may not be available in test environment
    "missing-module-docstring",
    "missing-function-docstring"
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
ignore_missing_imports = true
python_version = "3.8"